# step_timing_location_np

./: CMakeLists.txt  README.md
src/walking/: CMakeLists.txt  main.cpp
src/walking/ComanODE/: BigmanODERobotClass.cpp  BigmanODERobotClass.h  CogimonODERobotClass.cpp  CogimonODERobotClass.h  ComanODERobotClass.cpp  ComanODERobotClass.h  ComanSimClass.cpp  ComanSimClass.h  ODERobotBaseClass.cpp  ODERobotBaseClass.h  ODESimBaseClass.cpp  ODESimBaseClass.h  ODEsettings.h
src/walking/Filters/: FilterClass.cpp  FilterClass.h  MeanFilterClass.cpp  MeanFilterClass.h
src/walking/IK/: IKClass.cpp  IKClass.h
src/walking/MPC/: MPCClass.cpp  MPCClass.h
src/walking/MPC/mpc_heightopt/: MPCClass_height.cpp  MPCClass_height.h
src/walking/QP/: QPBaseClass.cpp  QPBaseClass.h
src/walking/RTControl/: MpcRTControlClass.cpp  MpcRTControlClass.h  RTControlBaseClass.cpp  RTControlBaseClass.h
src/walking/RobotModel/: RobotModelClass.cpp  RobotModelClass.h
src/walking/RobotPara/: RobotParaClass.cpp  RobotParaClass.h  bigman_para.yaml  cogimon_para.yaml  coman_para.yaml  robot_para.yaml  walkman_para.yaml
src/walking/RobotPara/urdf/: bigman_robot.urdf  bigman_robot.urdf.xacro  bigman_robot_floating_base.urdf  cogimon.urdf  cogimon_lowerbody_floating_base.urdf  cogimon_with_pennacchio.urdf  coman_floating_base.xacro  coman_full.urdf  coman_full.urdf.xacro  coman_full_floating_base.urdf  notes  walkman_floating_base.urdf
src/walking/Stabilizer/: StabilizerClass.cpp  StabilizerClass.h
src/walking/WBS/: RobotStateClass.cpp  RobotStateClass.h  WholeBodySensingClass.cpp  WholeBodySensingClass.h
src/walking/utils/: CMakeLists.txt  ChartClass.h  Eigen_utils.hpp  Func_utils.h  IOClass.h  Logger.h  MatrixRotation.h  QuaternionClass.h  ctrl_utils.h  rt_vector.h  utils.h
src/walking/utils/mrdplot/: mrdplot.cpp  mrdplot.h
