CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

SET(PROJ_NAME ComanODE)
# set(TARGET ${PROJ_NAME})
 
PROJECT(${PROJ_NAME} C CXX)
MESSAGE(STATUS "Project: ${PROJ_NAME}")    
MESSAGE(STATUS "Project Directory: ${PROJECT_SOURCE_DIR}")


FIND_PACKAGE ( Threads REQUIRED )
SET(SUB_SRC  src/walking)

SET(SRC_PATH  ${PROJECT_SOURCE_DIR}/${SUB_SRC})
ADD_SUBDIRECTORY(${SUB_SRC} bin)

